--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -43,8 +43,8 @@
                     </div>
                     <div class="info-row">
                         <span class="label">data:</span>
-                        <span id="detail-name" class="value"></span>
-                        <button id="edit-name-btn" class="btn small">
+                        <span id="detail-data" class="value"></span>
+                        <button id="edit-data-btn" class="btn small">
                             <i class="fas fa-edit"></i>
                         </button>
                     </div>
@@ -56,12 +56,12 @@
         <div id="edit-name-modal" class="modal-overlay hidden">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3>עדכון כתובת</h3>
+                    <h3>עדכון שם מחשב</h3>
                     <button class="modal-close"><i class="fas fa-times"></i></button>
                 </div>
                 <form id="edit-name-form">
                     <div class="form-group">
-                        <label for="updated-name">כתובת חדשה</label>
+                        <label for="updated-name">מחשב חדש</label>
                         <input type="text" id="updated-name" required>
                     </div>
                     <div class="modal-actions">
