--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -43,7 +43,17 @@
                     </div>
                     <div class="info-row">
                         <span class="label">data:</span>
-                        <span id="detail-data" class="value"></span>
+                        <span id="detail-data" class="value">
+                            <table>
+                                <tr>
+                                    <th>minut</th>
+                                    <th>text</th>
+                                </tr>
+                                <tbody id="table-body">
+                                </tbody>
+                            
+                            </table>
+                        </span>
                     </div>
                 </div>
             </section>
