--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -46,7 +46,7 @@
                         <span id="detail-data" class="value">
                             <table>
                                 <tr>
-                                    <th style="width: 150px;">minut</th>
+                                    <th>minut</th>
                                     <th>text</th>
                                 </tr>
                                 <tbody id="table-body">
