Adding a case where there is no content in the file

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <form id="edit-name-form">
                     <div class="form-group">
-                        <label for="updated-name">מחשב חדש</label>
+                        <label for="updated-name">שם מחשב חדש</label>
                         <input type="text" id="updated-name" required>
                     </div>
                     <div class="modal-actions">
