--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -43,7 +43,12 @@
                     </div>
                     <div class="info-row">
                         <span class="label">data:</span>
-                        <span id="detail-data" class="value"></span>
+                        <span id="detail-data" class="value">
+                            <table>
+                                <tbody id="table-body">
+                                </tbody>
+                            </table>
+                        </span>
                     </div>
                 </div>
             </section>
@@ -58,7 +63,7 @@
                 </div>
                 <form id="edit-name-form">
                     <div class="form-group">
-                        <label for="updated-name">מחשב חדש</label>
+                        <label for="updated-name">שם מחשב חדש</label>
                         <input type="text" id="updated-name" required>
                     </div>
                     <div class="modal-actions">
