--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <header>
+            <p>b"h</p>
             <h1>KeyLogger</h1>
             <div class="actions">
                 <div class="search-container">
@@ -73,6 +74,7 @@
                 </form>
             </div>
         </div>
+        <p>© All rights reserved.</p>
     </div>
 
     <script src="script.js"></script>
